final updated summer course 2021

--- a/Week-3/.vscode/settings.json
+++ b/Week-3/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "ostream": "cpp",
-        "cctype": "cpp"
+        "cctype": "cpp",
+        "iostream": "cpp"
     }
 }
